// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`backgroundOrigin renders 0 1`] = `
Array [
  .c0 {
  background-origin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: 0;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundOrigin renders function 1`] = `
Array [
  .c0 {
  background-origin: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: has;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: has;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundOrigin renders invalid theme path 1`] = `
Array [
  .c0 {
  background-origin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundOrigin renders negative number 1`] = `
Array [
  .c0 {
  background-origin: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundOrigin renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    background-origin: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-origin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-origin: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-origin: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    background-origin: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-origin: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-origin: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-origin: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-origin: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-origin: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-origin: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-origin: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    background-origin: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-origin: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    background-origin: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    background-origin: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundOrigin renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    background-origin: July;
  }
}

@media April {
  .c0 {
    background-origin: August;
  }
}

@media January {
  .c0 {
    background-origin: September;
  }
}

@media April {
  .c0 {
    background-origin: November;
  }
}

@media June {
  .c0 {
    background-origin: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    background-origin: July;
  }
}

@media April {
  .c0 {
    background-origin: August;
  }
}

@media January {
  .c0 {
    background-origin: September;
  }
}

@media April {
  .c0 {
    background-origin: November;
  }
}

@media June {
  .c0 {
    background-origin: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-origin: January;
  }
}

@media April {
  .c0 {
    background-origin: December;
  }
}

@media January {
  .c0 {
    background-origin: April;
  }
}

@media April {
  .c0 {
    background-origin: May;
  }
}

@media June {
  .c0 {
    background-origin: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    background-origin: January;
  }
}

@media April {
  .c0 {
    background-origin: December;
  }
}

@media January {
  .c0 {
    background-origin: April;
  }
}

@media April {
  .c0 {
    background-origin: May;
  }
}

@media June {
  .c0 {
    background-origin: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundOrigin renders postitive number 1`] = `
Array [
  .c0 {
  background-origin: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundOrigin renders string 1`] = `
Array [
  .c0 {
  background-origin: July;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: July;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: June;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: June;
}

<div
    className="c0"
  />,
]
`;

exports[`backgroundOrigin renders valid theme path 1`] = `
Array [
  .c0 {
  background-origin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  background-origin: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
